# clair

./: .gitignore  ARCHIVED_TASKS.md  EXPLORATION.md  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  README.md  RESEARCH_INDEX.md  clair_thesis_review.md  loop.sh  plan.md
archive/: README.md  auth.clair  categorical-structure.md  hello-world.clair
examples/: hello-world-simple.clair  pi-calculation.md
exploration/: thread-1-confidence.md  thread-10-dissertation.md  thread-2.10-defeat-confidence.md  thread-2.12-reinstatement.md  thread-2.15-choice-construct.md  thread-2.18-conservative-extension.md  thread-2.21-decidable-fragments.md  thread-2.22-curry-howard-terms.md  thread-2.4-justification-logic-connection.md  thread-3.15-stratification-lean-completion.md  thread-3.21-cpl-godel-variant.md  thread-3.30-loeb-fixedpoint-interaction.md  thread-3.33-multilevel-introspection-threshold.md  thread-3.34-aggregated-introspection.md  thread-4-grounding.md  thread-5-belief-revision.md  thread-8-verification.md  thread-8.10-belief-type-formalization.md  thread-8.11-stratified-belief-lean.md  thread-8.12-clair-syntax-lean.md  thread-8.2-type-safety.md  thread-8.4-extract-interpreter-analysis.md  thread-8.4-extract-interpreter.md
formal/: belief-types.tex  clair-spec.md  decision-semantics.md  derivation-calculus.md  foundations-and-limits.md  logical-foundations.md  multi-agent-beliefs.md  swarm-coordination.md  syntax.md  theoretical-foundations.md  turing-completeness.md  verification-of-intent.md
formal/lean/: CLAIR.lean  (+2 more)
implementation/haskell/: .gitignore  README.md  clair.cabal
implementation/haskell/app/: Main.hs
implementation/haskell/lib/CLAIR/: Confidence.hs  Evaluator.hs  Parser.hs  Pretty.hs  Syntax.hs  TypeChecker.hs
implementation/haskell/lib/CLAIR/Internal/: Utils.hs
implementation/haskell/lib/CLAIR/TypeChecker/: Types.hs
implementation/haskell/test/: Main.hs
implementation/haskell/test/CLAIR/Test/: Confidence.hs  Evaluator.hs  HelloWorld.hs  TypeChecker.hs
notes/: design-rationale.md  exploration-2026-01-29-minimal-spec.md  prior-art.md  reassessment-2026-01-29.md
parser-hs/: README.md  package.yaml
specs/: clair-exploration.md  clair-ir-exploration.md  thesis-remediation.md
(+132 files in other folders)
