cabal-version:      2.4
name:               clair
version:            0.1.0.0
synopsis:           CLAIR: Comprehensible LLM AI Intermediate Representation
description:        A reference interpreter for CLAIR, a language for confidence-weighted
                    justified belief with defeasible reasoning and self-reference handling.
license:            MIT
author:             Author
maintainer:         example@example.com
category:           Language
build-type:         Simple
extra-source-files: README.md

common shared-properties
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
    base >=4.14 && <5,
    parsec >=3.1 && <3.2,
    mtl >=2.2 && <2.4,
    containers >=0.6 && <0.8,
    text >=1.2 && <2.2,
    QuickCheck >=2.14 && <2.16,
    tasty >=1.4 && <1.6,
    tasty-quickcheck >=0.10 && <0.11,
    tasty-hunit >=0.10 && <0.11,
    haskeline >=0.8 && <0.9,
    aeson >=2.0 && <2.3,
    bytestring >=0.11 && <0.13

library
  import:           shared-properties
  exposed-modules:
    CLAIR.Confidence
    CLAIR.Syntax
    CLAIR.Parser
    CLAIR.TypeChecker
    CLAIR.TypeChecker.Types
    CLAIR.Evaluator
    CLAIR.Pretty
  other-modules:
    CLAIR.Internal.Utils
  hs-source-dirs:    lib
  default-extensions:
    GADTs
    DataKinds
    TypeFamilies
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    LambdaCase
    RecordWildCards

test-suite clair-test
  import:           shared-properties
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:    test
  build-depends:
    clair
  other-modules:
    CLAIR.Test.Confidence
    CLAIR.Test.TypeChecker
    CLAIR.Test.Evaluator
    CLAIR.Test.HelloWorld

executable clair-repl
  import:           shared-properties
  main-is:          Main.hs
  hs-source-dirs:    app
  build-depends:
    clair
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
